# vnfin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
context/: vnfin-oss-context.md
docs/: ai-usage.md  api.md  getting-started.md  index.md  mission.md  plan.md  roadmap.md  stability.md  units.md  vnstock-blacklist.md
live_tests/: conftest.py  test_cross_source_live.py  test_crypto_failover_live.py  test_equities_universe_live.py  test_fundamentals_failover_live.py  test_fx_live.py  test_gold_world_failover_live.py  test_integration_live.py  test_macro_failover_live.py
scripts/: diagnostics_live.py  dump_api_surface.py  healthcheck.py  probe_bank_itemcodes.py  probe_corporate_itemcodes.py
tasks/: 152-rates-coverage-design.md  155-fund-metadata-design.md  163-b2-fix2-spec.md  163-b2-fix3-spec.md  163-close-comment.md  163-corp-actions-design.md  163-finfo-exdate-probe-evidence.md  163-round7-descope-spec.md  163-vsdc-spine-build-spec.md  167-equity-universe-spec.md  175-tier1-as-of-disclosure-design.md  175-tier3-diagnostic-fix-design.md  181-fund-nav-asof-spec.md  182-close-comment.md  187-midnight-recovery-spec.md  188-warning-token-forward-discovery-spec.md  189-board-unavailable-spec.md  190-fund-nav-stale-spec.md  191-test-harden-187-spec.md  192-defuse-trace-spec.md  193-build-spec.md  193-fix-spec-round2.md  193-world-index-design.md  194-build-spec.md  194-nav-quarantine-design.md  195-build-spec.md  195-design-note.md  195-fix-spec.md  196-build-spec.md  196-design-note.md  196-dupheader-fix-spec.md  197-design-note.md  198-design-note.md  active-backlog.md  refactor-audit-2026-06-20.md  refactor-provider-contracts.md  v0.2-goal.md  wave2-scoping-summary.md
tests/: _warning_token_scan.py  conftest.py  test_calendar.py  test_client.py  test_coerce.py  test_contract_fields.py  test_contract_keys.py  test_contract_results.py  test_contract_rows.py  test_contract_timeseries.py  test_corp_actions_vsdc.py  test_cross_source_live.py  test_crypto.py  test_crypto_coinbase.py  test_crypto_coverage.py  test_crypto_failover.py  test_diagnostics.py  test_docs_contract.py  test_equities.py  test_facade.py  test_failover.py  test_fundamentals.py  test_fundamentals_cafef.py  (+43 more)
(+190 files in other folders)
