[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vnfin"
version = "0.0.1"
description = "Clean-room OSS Python library for Vietnam financial-market data"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=8", "pytest-cov>=5", "pandas>=2.0", "tzdata>=2024.1", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["vnfin*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: live-network tests against real broker endpoints; opt-in, skipped in CI",
]
