[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vnfin"
version = "0.1.0"
description = "Clean-room OSS Python library for Vietnam financial-market data (prices, fundamentals, funds, indices, gold, macro, crypto) — no-key-first with multi-source failover"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "vnfin contributors" }]
keywords = ["vietnam", "finance", "stocks", "hose", "macro", "market-data", "ohlcv", "fundamentals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = ["pytest>=8", "pytest-cov>=5", "pandas>=2.0", "tzdata>=2024.1", "httpx>=0.27", "build>=1.0"]

[project.urls]
Documentation = "https://github.com/hungson175/vnfin#readme"
Source = "https://github.com/hungson175/vnfin"

[tool.setuptools.packages.find]
include = ["vnfin*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: live-network tests against real broker endpoints; opt-in, skipped in CI",
]
